--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "author": "FreightHub Recruiting Team",
   "license": "MIT",
   "scripts": {
-    "start": "json-server db.json"
+    "start": "json-server db.json",
+    "client": "cd client && npm start",
+    "server": "nodemon ./bin/www",
+    "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\""
   },
   "dependencies": {
+    "concurrently": "^4.1.1",
     "json-server": "^0.14.2"
   }
 }
